--- a/issFinacial/issFinacial.csproj
+++ b/issFinacial/issFinacial.csproj
@@ -234,7 +234,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="API\apiHomeController.cs" />
+    <Compile Include="Controllers\InstallmentsController.cs" />
+    <Compile Include="Migrations\202111221947146_m3.cs" />
+    <Compile Include="Migrations\202111221947146_m3.designer.cs">
+      <DependentUpon>202111221947146_m3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202111250032291_m4.cs" />
+    <Compile Include="Migrations\202111250032291_m4.designer.cs">
+      <DependentUpon>202111250032291_m4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\API\apiHomeController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -264,6 +273,10 @@
     <Compile Include="Migrations\202109290833090_m1.designer.cs">
       <DependentUpon>202109290833090_m1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202111200124236_m2.cs" />
+    <Compile Include="Migrations\202111200124236_m2.designer.cs">
+      <DependentUpon>202111200124236_m2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountGrouping.cs" />
     <Compile Include="Models\AccountLedger.cs" />
@@ -271,6 +284,7 @@
     <Compile Include="Models\Area.cs" />
     <Compile Include="Models\Broker.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Installment.cs" />
     <Compile Include="Models\GramRate.cs" />
     <Compile Include="Models\iisModel.cs" />
     <Compile Include="Models\InsuranceCompany.cs" />
@@ -288,6 +302,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLHelper\QueryBuilder.cs" />
     <Compile Include="SQLHelper\SQLHelper.cs" />
+    <Compile Include="Views\Installment.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\css\all.min.css" />
@@ -3139,9 +3154,15 @@
     <Content Include="Views\Brokers1\Details.cshtml" />
     <Content Include="Views\Brokers1\Edit.cshtml" />
     <Content Include="Views\Brokers1\Index.cshtml" />
+    <Content Include="Views\Installments\Create.cshtml" />
+    <Content Include="Views\Installments\Delete.cshtml" />
+    <Content Include="Views\Installments\Details.cshtml" />
+    <Content Include="Views\Installments\Edit.cshtml" />
+    <Content Include="Views\Installments\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Default\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -3159,6 +3180,15 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202109290833090_m1.resx">
       <DependentUpon>202109290833090_m1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111200124236_m2.resx">
+      <DependentUpon>202111200124236_m2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111221947146_m3.resx">
+      <DependentUpon>202111221947146_m3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111250032291_m4.resx">
+      <DependentUpon>202111250032291_m4.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
